Update MainActivity.java